--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+annotated-types==0.7.0
+anyio==4.8.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 filelock==3.17.0
 fsspec==2025.3.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.29.2
 idna==3.10
 Jinja2==3.1.6
@@ -10,8 +15,12 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.3
+ollama==0.4.7
 packaging==24.2
 pillow==11.1.0
+psycopg2-binary==2.9.10
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -20,6 +29,7 @@ scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==3.4.1
 setuptools==76.0.0
+sniffio==1.3.1
 sympy==1.13.1
 threadpoolctl==3.5.0
 tokenizers==0.21.0
@@ -28,4 +38,3 @@ tqdm==4.67.1
 transformers==4.49.0
 typing_extensions==4.12.2
 urllib3==2.3.0
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.2/libexec/wheel-0.45.1-py3-none-any.whl#sha256=b9235939e2096903717cb6bfc132267f8a7e46deb2ec3ef9c5e234ea301795d0
